update no gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /BackEnd/AppCasasAPI/.vs/AppCasasAPI/v17/.suo
 /BackEnd/AppCasasAPI/.vs/AppCasasAPI/v17/DocumentLayout.json
 /BackEnd/AppCasasAPI/AppCasasAPI/obj
+/BackEnd/AppCasasAPI/.vs/AppCasasAPI/config/applicationhost.config
+/BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/7f612c9c-39c8-4a6d-a1a4-731e6389221a.vsidx
+/BackEnd/AppCasasAPI/AppCasasAPI/bin/Debug/net8.0
