Created Database Models

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 /BackEnd/AppCasasAPI/.vs/AppCasasAPI/config/applicationhost.config
 /BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/7f612c9c-39c8-4a6d-a1a4-731e6389221a.vsidx
 /BackEnd/AppCasasAPI/AppCasasAPI/bin/Debug/net8.0
+/BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/14eb3a85-c866-43fd-bf5d-fef764cd8cf4.vsidx
+/BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/15b7a5b5-d967-46c8-bed8-9c5d0fa2d77f.vsidx
+/BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/3b656d9b-1ad6-4e3f-8aee-16883ac976af.vsidx
+/BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/85097600-035b-4077-bb1a-86d646139bf9.vsidx
+/BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/8adeaf70-ec16-40dd-8830-378fd48316d0.vsidx
