Created models and README

--- a/BackEnd/AppCasasAPI/AppCasasAPI/AppCasasAPI.csproj
+++ b/BackEnd/AppCasasAPI/AppCasasAPI/AppCasasAPI.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Model\" />
+    <Folder Include="Controllers\" />
     <Folder Include="Dto\" />
     <Folder Include="Repository\" />
     <Folder Include="Service\" />
