Deleted duplicated proprieties

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@
 /BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/3b656d9b-1ad6-4e3f-8aee-16883ac976af.vsidx
 /BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/85097600-035b-4077-bb1a-86d646139bf9.vsidx
 /BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/8adeaf70-ec16-40dd-8830-378fd48316d0.vsidx
+/BackEnd/AppCasasAPI/.vs/AppCasasAPI/DesignTimeBuild/.dtbcache.v2
+/BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/20d4d9ed-8df5-4ba0-9e1d-4e768ed67d92.vsidx
+/BackEnd/AppCasasAPI/.vs/AppCasasAPI/FileContentIndex/7cfe115e-363d-4cdf-a34c-059b9f94b9d0.vsidx
+/BackEnd/AppCasasAPI/.vs/AppCasasAPI/v17/.futdcache.v2
+/BackEnd/AppCasasAPI/.vs/ProjectEvaluation/appcasasapi.metadata.v7.bin
+/BackEnd/AppCasasAPI/.vs/ProjectEvaluation/appcasasapi.projects.v7.bin
+*.vsidx
