--- a/BackEnd/AppCasasAPI/AppCasasAPI/AppCasasAPI.csproj
+++ b/BackEnd/AppCasasAPI/AppCasasAPI/AppCasasAPI.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Npgsql" Version="8.0.2" />
+    <PackageReference Include="Npgsql.DependencyInjection" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
